Небольшие исправления в index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -88,7 +88,7 @@
                         <div class="main-category">Travel</div>
                         <div class="main-category">Health</div>
                     </div>
-                    <div class="main-article-title">10 мест, ради которых стоит проснуться на рассвете</div>
+                    <h2 class="main-article-title">10 мест, ради которых стоит проснуться на рассвете</h2>
                     <div class="main-date-author">
                         <div class="main-date">10 июня 2019</div>
                         <div class="main-author">Неизвестный автор</div>
@@ -104,7 +104,7 @@
                         <div class="main-category">health</div>
                         <div class="main-category">lifestyle</div>
                     </div>
-                    <div class="main-article-title">Йога для начинающих в домашних условиях</div>
+                    <h2 class="main-article-title">Йога для начинающих в домашних условиях</h2>
                     <div class="main-date-author">
                         <div class="main-date">10 июня 2019</div>
                         <div class="main-author">Неизвестный автор</div>
@@ -119,7 +119,7 @@
                     <div class="main-list-category">
                         <div class="main-category">music</div>
                     </div>
-                    <div class="main-article-title">Лучшие музыкальные фестивали этого лета</div>
+                    <h2 class="main-article-title">Лучшие музыкальные фестивали этого лета</h2>
                     <div class="main-date-author">
                         <div class="main-date">10 июня 2019</div>
                         <div class="main-author">Неизвестный автор</div>
@@ -136,7 +136,7 @@
                         <div class="main-category">LYFESTYLE</div>
                         <div class="main-category">FOOD</div>
                     </div>
-                    <div class="main-article-title">Наукоёмкий подход к кулинарии</div>
+                    <h2 class="main-article-title">Наукоёмкий подход к кулинарии</h2>
                     <div class="main-date-author">
                         <div class="main-date">10 июня 2019</div>
                         <div class="main-author">Неизвестный автор</div>
@@ -153,7 +153,7 @@
                         <div class="main-category">INTERIOR</div>
                         <div class="main-category">art</div>
                     </div>
-                    <div class="main-article-title">делаем модные принты на подушках для интерьера</div>
+                    <h2 class="main-article-title">делаем модные принты на подушках для интерьера</h2>
                     <div class="main-date-author">
                         <div class="main-date">10 июня 2019</div>
                         <div class="main-author">Неизвестный автор</div>
@@ -170,35 +170,35 @@
                 <img class="sidebar-post-img" src="images/2.jpg" alt="дополнительный пост 1">
                 <div class="sidebar-post-date-title">
                     <div class="sidebar-post-date">14 июня 2019</div>
-                    <div class="sidebar-post-title">10 мест, ради которых стоит проснуться</div>
+                    <h2 class="sidebar-post-title">10 мест, ради которых стоит проснуться</h2>
                 </div>
             </article>
             <article class="sidebar-post">
                 <img class="sidebar-post-img" src="images/151.jpg" alt="дополнительный пост 2">
                 <div class="sidebar-post-date-title">
                     <div class="sidebar-post-date">14 июня 2019</div>
-                    <div class="sidebar-post-title">Йога для домашних</div>
+                    <h2 class="sidebar-post-title">Йога для домашних</h2>
                 </div>
             </article>
             <article class="sidebar-post">
                 <img class="sidebar-post-img" src="images/45.jpg" alt="дополнительный пост 3">
                 <div class="sidebar-post-date-title">
                     <div class="sidebar-post-date">14 июня 2019</div>
-                    <div class="sidebar-post-title">как мы превратили классное место в балкон</div>
+                    <h2 class="sidebar-post-title">как мы превратили классное место в балкон</h2>
                 </div>
             </article>
             <article class="sidebar-post">
                 <img class="sidebar-post-img" src="images/501.jpg" alt="дополнительный пост 4">
                 <div class="sidebar-post-date-title">
                     <div class="sidebar-post-date">14 июня 2019</div>
-                    <div class="sidebar-post-title">Кулинарный подход к науке</div>
+                    <h2 class="sidebar-post-title">Кулинарный подход к науке</h2>
                 </div>
             </article>
             <article class="sidebar-post">
                 <img class="sidebar-post-img" src="images/7.jpg" alt="дополнительный пост 5">
                 <div class="sidebar-post-date-title">
                     <div class="sidebar-post-date">14 июня 2019</div>
-                    <div class="sidebar-post-title">лучшие прически для распущенных волос</div>
+                    <h2 class="sidebar-post-title">лучшие прически для распущенных волос</h2>
                 </div>
             </article>
             <form class="form-search" action="#">
@@ -284,8 +284,6 @@
                         <button class="card-buy" type="button">в магазин</button>
                     </div>
                 </div>
-
-            </div>
             </div>
         </div>
     </div>
