--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             </article>
         </main>
         <aside class="aside-block">
-            <section>
+            <section class="aside-section">
                 <h2 class="sidebar-title">Новые посты</h2>
                 <article class="sidebar-post">
                     <img class="sidebar-post-img" src="images/2.jpg" alt="дополнительный пост 1">
@@ -203,12 +203,14 @@
                     </div>
                 </article>
             </section>
-            <section>
+            <section class="aside-section">
                 <form class="form-search" action="#">
                     <input class="search-field" type="text" placeholder="Найти...">
                     <div class="hidden">Поле ввода фразы для поиска</div>
                     <button class="search-button" type="submit"><span class="hidden">кнопка поиска</span></button>
                 </form>
+            </section>
+            <section class="aside-section">
                 <h2 class="sidebar-title">Рассылка</h2>
                 <form class="form-subscribe" action="#">
                     <input class="subscribe-field" type="text" placeholder="Ваш email-адрес">
@@ -216,7 +218,7 @@
                     <button class="subscribe-button" type="submit">Подписаться</button>
                 </form>
             </section>
-            <section>
+            <section class="aside-section">
                 <h2 class="sidebar-title">Теги</h2>
                 <ul class="tags-block">
                     <li class="tag"><a href="#">Fashion</a></li>
